# cockpit-ipc-demo

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
include/: common.hpp
src/: camera_service.cpp  cleanup_ipc.cpp  display_manager.cpp  hmi_services.cpp
